tries to make the renderable-Collection bindable (does not work for some reason) ??

--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -10,5 +10,5 @@
     Height="700"
     mc:Ignorable="d">
 
-    <pcv:PointCloudViewer x:Name="pclViewer" />
+    <pcv:PointCloudViewer x:Name="pclViewer" Renderables="{Binding PointCloudObjects}" />
 </Window>
