--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="OpenTkTest.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:av="http://icsharpcode.net/sharpdevelop/avalonedit"
+    xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pcv="clr-namespace:GCodeViewer.WPF.Controls.Pointcloud;assembly=GCodeViewer.WPF.Controls"
@@ -22,10 +22,11 @@
             Grid.Column="0"
             Renderables="{Binding PointCloudObjects}" />
 
-        <av:TextEditor
+        <avalonEdit:TextEditor
             x:Name="TextEditor"
             Grid.Column="1"
             Background="#1e1e1e"
+            Foreground="LightGray"
             ShowLineNumbers="True" />
     </Grid>
 </Window>
