--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -13,7 +13,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
@@ -27,6 +27,7 @@
             Grid.Column="1"
             Background="#1e1e1e"
             Foreground="LightGray"
-            ShowLineNumbers="True" />
+            ShowLineNumbers="True"
+            WordWrap="True" />
     </Grid>
 </Window>
