--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -2,8 +2,8 @@
     x:Class="OpenTkTest.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:OpenTkTest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pcv="clr-namespace:GCodeViewer.WPF.Controls.Pointcloud;assembly=GCodeViewer.WPF.Controls"
     Title="MainWindow"
@@ -22,12 +22,7 @@
             Grid.Column="0"
             Renderables="{Binding PointCloudObjects}" />
 
-        <avalonEdit:TextEditor
-            x:Name="TextEditor"
-            Grid.Column="1"
-            Background="#1e1e1e"
-            Foreground="LightGray"
-            ShowLineNumbers="True"
-            WordWrap="True" />
+        <local:GCodeTextEditor />
+
     </Grid>
 </Window>
