--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:OpenTkTest"
+    xmlns:editor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pcv="clr-namespace:GCodeViewer.WPF.Controls.Pointcloud;assembly=GCodeViewer.WPF.Controls"
     Title="MainWindow"
@@ -22,6 +22,6 @@
             Grid.Column="0"
             Renderables="{Binding PointCloudObjects}" />
 
-        <local:GCodeTextEditor x:Name="TextEditor" Grid.Column="1" />
+        <editor:GCodeTextEditor x:Name="TextEditor" Grid.Column="1" />
     </Grid>
 </Window>
