--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -9,6 +9,55 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
 
+    <UserControl.Resources>
+        <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Thumb}">
+                        <Border
+                            Background="Black"
+                            BorderBrush="Red"
+                            BorderThickness="1"
+                            CornerRadius="2" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="ScrollBar">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ScrollBar}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition MaxHeight="18" />
+                                <RowDefinition Height="0.00001*" />
+                                <RowDefinition MaxHeight="18" />
+                            </Grid.RowDefinitions>
+                            <Border Grid.RowSpan="3" />
+                            <RepeatButton
+                                Grid.Row="0"
+                                Command="ScrollBar.LineUpCommand"
+                                Content="M 0 4 L 8 4 L 4 0 Z" />
+                            <Track
+                                x:Name="PART_Track"
+                                Grid.Row="1"
+                                IsDirectionReversed="true">
+                                <Track.Thumb>
+                                    <Thumb Margin="1,0,1,0" Style="{StaticResource ScrollBarThumb}" />
+                                </Track.Thumb>
+                            </Track>
+                            <RepeatButton
+                                Grid.Row="3"
+                                Command="ScrollBar.LineDownCommand"
+                                Content="M 0 0 L 4 4 L 8 0 Z" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <avalonEdit:TextEditor
             x:Name="TextEditor"
