--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -14,11 +14,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Border
-                            Background="Black"
-                            BorderBrush="Red"
-                            BorderThickness="1"
-                            CornerRadius="2" />
+                        <Border Background="#9E9E9E" CornerRadius="2" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -28,7 +24,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ScrollBar}">
-                        <Grid>
+                        <Grid Background="#3E3E42">
                             <Grid.RowDefinitions>
                                 <RowDefinition MaxHeight="18" />
                                 <RowDefinition Height="0.00001*" />
