--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -10,6 +10,9 @@
     mc:Ignorable="d">
 
     <UserControl.Resources>
+        <Color x:Key="MiddleDarkGray">#3E3E42</Color>
+        <SolidColorBrush x:Key="ScrollbarBackgroundColor" Color="{StaticResource MiddleDarkGray}" />
+
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="Template">
                 <Setter.Value>
@@ -24,17 +27,14 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ScrollBar}">
-                        <Grid Background="#3E3E42">
+                        <Grid Background="{StaticResource ScrollbarBackgroundColor}">
                             <Grid.RowDefinitions>
-                                <RowDefinition MaxHeight="18" />
+                                <RowDefinition MaxHeight="15" />
                                 <RowDefinition Height="0.00001*" />
-                                <RowDefinition MaxHeight="18" />
+                                <RowDefinition MaxHeight="15" />
                             </Grid.RowDefinitions>
                             <Border Grid.RowSpan="3" />
-                            <RepeatButton
-                                Grid.Row="0"
-                                Command="ScrollBar.LineUpCommand"
-                                Content="M 0 4 L 8 4 L 4 0 Z" />
+                            <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand" />
                             <Track
                                 x:Name="PART_Track"
                                 Grid.Row="1"
@@ -43,10 +43,7 @@
                                     <Thumb Margin="1,0,1,0" Style="{StaticResource ScrollBarThumb}" />
                                 </Track.Thumb>
                             </Track>
-                            <RepeatButton
-                                Grid.Row="3"
-                                Command="ScrollBar.LineDownCommand"
-                                Content="M 0 0 L 4 4 L 8 0 Z" />
+                            <RepeatButton Grid.Row="3" Command="ScrollBar.LineDownCommand" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
