--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -13,15 +13,42 @@
         <Color x:Key="MiddleDarkGray">#3E3E42</Color>
         <SolidColorBrush x:Key="ScrollbarBackgroundColor" Color="{StaticResource MiddleDarkGray}" />
 
+        <Color x:Key="MiddleLightGray">#9E9E9E</Color>
+        <SolidColorBrush x:Key="ScrollbarForegroundColor" Color="{StaticResource MiddleLightGray}" />
+
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Border Background="#9E9E9E" CornerRadius="2" />
+                        <Border Background="{StaticResource ScrollbarForegroundColor}" CornerRadius="2" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
+            <Setter Property="SnapsToDevicePixels" Value="True" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="Focusable" Value="false" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RepeatButton}">
+                        <Border
+                            Name="Border"
+                            Margin="1"
+                            Background="{StaticResource ScrollbarForegroundColor}"
+                            CornerRadius="1" />
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="White" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
 
         <Style TargetType="ScrollBar">
             <Setter Property="Template">
@@ -33,8 +60,12 @@
                                 <RowDefinition Height="0.00001*" />
                                 <RowDefinition MaxHeight="15" />
                             </Grid.RowDefinitions>
+
                             <Border Grid.RowSpan="3" />
-                            <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand" />
+                            <RepeatButton
+                                Grid.Row="0"
+                                Command="ScrollBar.LineUpCommand"
+                                Style="{StaticResource ScrollBarLineButton}" />
                             <Track
                                 x:Name="PART_Track"
                                 Grid.Row="1"
@@ -43,7 +74,10 @@
                                     <Thumb Margin="1,0,1,0" Style="{StaticResource ScrollBarThumb}" />
                                 </Track.Thumb>
                             </Track>
-                            <RepeatButton Grid.Row="3" Command="ScrollBar.LineDownCommand" />
+                            <RepeatButton
+                                Grid.Row="3"
+                                Command="ScrollBar.LineDownCommand"
+                                Style="{StaticResource ScrollBarLineButton}" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
