--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -10,17 +10,14 @@
     mc:Ignorable="d">
 
     <UserControl.Resources>
-        <Color x:Key="MiddleDarkGray">#3E3E42</Color>
-        <SolidColorBrush x:Key="ScrollbarBackgroundColor" Color="{StaticResource MiddleDarkGray}" />
-
-        <Color x:Key="MiddleLightGray">#9E9E9E</Color>
-        <SolidColorBrush x:Key="ScrollbarForegroundColor" Color="{StaticResource MiddleLightGray}" />
+        <SolidColorBrush x:Key="ScrollbarBackgroundColor" Color="#3E3E42" />
+        <SolidColorBrush x:Key="ScrollbarForegroundColor" Color="#9E9E9E" />
 
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Border Background="{StaticResource ScrollbarForegroundColor}" CornerRadius="2" />
+                        <Border Background="{StaticResource ScrollbarForegroundColor}" CornerRadius="1" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -36,8 +33,15 @@
                         <Border
                             Name="Border"
                             Margin="1"
-                            Background="{StaticResource ScrollbarForegroundColor}"
-                            CornerRadius="1" />
+                            Background="{StaticResource ScrollbarBackgroundColor}"
+                            BorderThickness="1"
+                            CornerRadius="2">
+                            <Path
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Data="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"
+                                Fill="{StaticResource ScrollbarForegroundColor}" />
+                        </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsEnabled" Value="false">
                                 <Setter Property="Foreground" Value="White" />
@@ -48,35 +52,35 @@
             </Setter>
         </Style>
 
-
-
         <Style TargetType="ScrollBar">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ScrollBar}">
                         <Grid Background="{StaticResource ScrollbarBackgroundColor}">
                             <Grid.RowDefinitions>
-                                <RowDefinition MaxHeight="15" />
+                                <RowDefinition MaxHeight="13" />
                                 <RowDefinition Height="0.00001*" />
-                                <RowDefinition MaxHeight="15" />
+                                <RowDefinition MaxHeight="13" />
                             </Grid.RowDefinitions>
 
                             <Border Grid.RowSpan="3" />
                             <RepeatButton
                                 Grid.Row="0"
                                 Command="ScrollBar.LineUpCommand"
+                                Content="M 0 4 L 8 4 L 4 0 Z"
                                 Style="{StaticResource ScrollBarLineButton}" />
                             <Track
                                 x:Name="PART_Track"
                                 Grid.Row="1"
                                 IsDirectionReversed="true">
                                 <Track.Thumb>
-                                    <Thumb Margin="1,0,1,0" Style="{StaticResource ScrollBarThumb}" />
+                                    <Thumb Margin="3,0,3,0" Style="{StaticResource ScrollBarThumb}" />
                                 </Track.Thumb>
                             </Track>
                             <RepeatButton
                                 Grid.Row="3"
                                 Command="ScrollBar.LineDownCommand"
+                                Content="M 0 0 L 4 4 L 8 0 Z"
                                 Style="{StaticResource ScrollBarLineButton}" />
                         </Grid>
                     </ControlTemplate>
@@ -84,6 +88,7 @@
             </Setter>
         </Style>
     </UserControl.Resources>
+
 
     <Grid>
         <avalonEdit:TextEditor
