--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -11,13 +11,13 @@
 
     <UserControl.Resources>
         <SolidColorBrush x:Key="ScrollbarBackgroundColor" Color="#3E3E42" />
-        <SolidColorBrush x:Key="ScrollbarForegroundColor" Color="#9E9E9E" />
+        <SolidColorBrush x:Key="ScrollbarForegroundColor" Color="#7A7A7A" />
 
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Border Background="{StaticResource ScrollbarForegroundColor}" CornerRadius="1" />
+                        <Border Background="{StaticResource ScrollbarForegroundColor}" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
