--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -104,6 +104,7 @@
             WordWrap="True" />
 
         <StackPanel
+            x:Name="Statusbar"
             Grid.Row="1"
             HorizontalAlignment="Right"
             VerticalAlignment="Stretch"
