--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:editor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:pcv="clr-namespace:GCodeViewer.WPF.Controls.Pointcloud;assembly=GCodeViewer.WPF.Controls"
+    xmlns:viewer="clr-namespace:GCodeViewer.WPF.Controls.PointCloud;assembly=GCodeViewer.WPF.Controls"
     Title="MainWindow"
     Width="1600"
     Height="800"
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
-        <pcv:Viewer3D
+        <viewer:Viewer3D
             x:Name="pclViewer"
             Grid.Column="0"
             Renderables="{Binding PointCloudObjects}" />
