--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -11,9 +11,10 @@
     Height="800"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
@@ -22,6 +23,13 @@
             Grid.Column="0"
             Renderables="{Binding PointCloudObjects}" />
 
-        <editor:GCodeTextEditor x:Name="TextEditor" Grid.Column="1" />
+        <GridSplitter
+            Grid.Column="1"
+            Width="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Stretch"
+            Background="#1e1e1e" />
+
+        <editor:GCodeTextEditor x:Name="TextEditor" Grid.Column="2" />
     </Grid>
 </Window>
