--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -29,14 +29,14 @@
             Grid.Column="0"
             HorizontalContentAlignment="Center"
             VerticalContentAlignment="Center"
-            Background="{Binding Background}"
+            Background="Transparent"
             BorderBrush="Transparent"
             Foreground="{Binding Foreground}"
-            Text="{Binding Value}" />
+            Text="{Binding Text}" />
         <Button
             Grid.Row="0"
             Grid.Column="1"
-            Background="{Binding Background}"
+            Background="Transparent"
             BorderBrush="transparent"
             DockPanel.Dock="Top">
             <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{Binding Foreground}" />
@@ -44,7 +44,7 @@
         <Button
             Grid.Row="1"
             Grid.Column="1"
-            Background="{Binding Background}"
+            Background="Transparent"
             BorderBrush="Transparent">
             <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{Binding Foreground}" />
         </Button>
