startvalues are now set

--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -38,6 +38,7 @@
             Grid.Column="1"
             Background="Transparent"
             BorderBrush="transparent"
+            Click="{Binding IncreaseValue}"
             DockPanel.Dock="Top">
             <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{Binding Foreground}" />
         </Button>
@@ -45,7 +46,8 @@
             Grid.Row="1"
             Grid.Column="1"
             Background="Transparent"
-            BorderBrush="Transparent">
+            BorderBrush="Transparent"
+            Click="{Binding DecreaseValue}">
             <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{Binding Foreground}" />
         </Button>
     </Grid>
