values are now constrained

--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -35,6 +35,7 @@
             Background="Transparent"
             BorderBrush="Transparent"
             Foreground="{Binding Foreground}"
+            PreviewTextInput="EnsureNumberInput"
             Text="{Binding Path=Text, Mode=TwoWay}" />
 
         <Button
