--- a/src/UserControlTest/MainWindow.xaml
+++ b/src/UserControlTest/MainWindow.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:UserControlTest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="800"
@@ -12,10 +11,11 @@
     mc:Ignorable="d">
     <Grid>
         <ctrl:NumericUpDown
+            x:Name="numUpDown"
             Background="DarkGray"
             Foreground="White"
             MaxValue="200"
             MinValue="-100"
-            Value="{Binding Path=Value, Mode=TwoWay}" />
+            Value="{Binding Path=NumValue, Mode=TwoWay}" />
     </Grid>
 </Window>
