dependency property should now be set properly

--- a/src/UserControlTest/MainWindow.xaml
+++ b/src/UserControlTest/MainWindow.xaml
@@ -12,8 +12,8 @@
     <Grid>
         <ctrl:NumericUpDown
             x:Name="numUpDown"
-            Background="DarkGray"
-            Foreground="White"
+            Background="CornflowerBlue"
+            Foreground="Orange"
             MaxValue="200"
             MinValue="-100"
             Value="{Binding Path=NumValue, Mode=TwoWay}" />
