--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -10,49 +10,54 @@
     d:DesignWidth="200"
     mc:Ignorable="d">
 
-    <Grid
-        HorizontalAlignment="Stretch"
-        VerticalAlignment="Stretch"
-        Background="{Binding Background}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="25" />
-        </Grid.ColumnDefinitions>
+    <Border BorderBrush="{Binding Foreground}" BorderThickness="1">
+        <Grid
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Background="{Binding Background}">
 
-        <TextBox
-            x:Name="TextBox"
-            Grid.Row="0"
-            Grid.RowSpan="2"
-            Grid.Column="0"
-            HorizontalContentAlignment="Center"
-            VerticalContentAlignment="Center"
-            Background="Transparent"
-            BorderBrush="Transparent"
-            Foreground="{Binding Foreground}"
-            PreviewTextInput="EnsureNumberInput"
-            Text="{Binding Path=Text, Mode=TwoWay}" />
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="25" />
+            </Grid.ColumnDefinitions>
 
-        <Button
-            Grid.Row="0"
-            Grid.Column="1"
-            Background="Transparent"
-            BorderBrush="transparent"
-            Command="{Binding IncreaseValue}"
-            DockPanel.Dock="Top">
-            <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{Binding Foreground}" />
-        </Button>
+            <TextBox
+                x:Name="TextBox"
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                Grid.Column="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Background="Transparent"
+                BorderBrush="Transparent"
+                Foreground="{Binding Foreground}"
+                PreviewTextInput="EnsureNumberInput"
+                Text="{Binding Path=Text, Mode=TwoWay}" />
 
-        <Button
-            Grid.Row="1"
-            Grid.Column="1"
-            Background="Transparent"
-            BorderBrush="Transparent"
-            Command="{Binding DecreaseValue}">
-            <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{Binding Foreground}" />
-        </Button>
-    </Grid>
+            <Button
+                Grid.Row="0"
+                Grid.Column="1"
+                Background="Transparent"
+                BorderBrush="transparent"
+                Command="{Binding IncreaseValue}"
+                DockPanel.Dock="Top">
+                <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{Binding Foreground}" />
+            </Button>
+
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Background="Transparent"
+                BorderBrush="Transparent"
+                Command="{Binding DecreaseValue}">
+                <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{Binding Foreground}" />
+            </Button>
+        </Grid>
+    </Border>
 </UserControl>
