moves all of the stuff to the usercontrol itself

--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -38,7 +38,7 @@
                 BorderBrush="Transparent"
                 Foreground="{Binding Foreground}"
                 PreviewTextInput="EnsureNumberInput"
-                Text="{Binding Path=Text, Mode=TwoWay}" />
+                Text="{Binding Path=Value, Mode=TwoWay}" />
 
             <Button
                 Grid.Row="0"
