numeric input can now be constrained

--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -38,6 +38,8 @@
                 Background="Transparent"
                 BorderBrush="Transparent"
                 Foreground="{Binding Foreground}"
+                MaxValue="{Binding MaxValue}"
+                MinValue="{Binding MinValue}"
                 Text="{Binding Path=Value, Mode=TwoWay}" />
 
             <Button
