--- a/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls/NumericUpDown.xaml
@@ -40,7 +40,7 @@
                 Foreground="{Binding Foreground}"
                 MaxValue="{Binding MaxValue}"
                 MinValue="{Binding MinValue}"
-                Text="{Binding Path=Value, Mode=TwoWay}" />
+                Text="{Binding Value}" />
 
             <Button
                 Grid.Row="0"
