--- a/src/Playground/OpenTkTest/MainWindow.xaml
+++ b/src/Playground/OpenTkTest/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:editor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewer="clr-namespace:GCodeViewer.WPF.Controls.PointCloud;assembly=GCodeViewer.WPF.Controls"
+    xmlns:viewer="clr-namespace:GCodeViewer.WPF.Controls.PoinCloud;assembly=GCodeViewer.WPF.Controls.PoinCloud"
     Title="MainWindow"
     Width="1600"
     Height="800"
@@ -22,6 +22,8 @@
                 <MenuItem Command="{Binding SaveAsFile}" Header="SaveAs" />
                 <MenuItem Command="{Binding CloseFile}" Header="Close" />
             </MenuItem>
+            <!--  xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"  -->
+            <!--<ctrl:NumericTextbox Width="100" />-->
         </Menu>
 
         <Grid Background="DarkGray" DockPanel.Dock="Bottom">
