--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -3,9 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-    xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:num="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -113,7 +113,7 @@
             VerticalAlignment="Stretch"
             Background="{StaticResource ScrollbarBackgroundColor}">
 
-            <!--<ctrl:NumericUpDown Value="{Binding FontSize}" />-->
+            <!--<num:NumericUpDown Value="{Binding FontSize}" />-->
             <!--
                 Width="40"
                 Margin="3"
@@ -134,7 +134,7 @@
                     Content="Ln:"
                     Foreground="#F1F1F1" />
                 <!--  TODO: make this useable  -->
-                <ctrl:NumericTextbox
+                <!--<ctrl:NumericTextbox
                     Width="Auto"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
@@ -143,7 +143,7 @@
                     Focusable="False"
                     Foreground="#F1F1F1"
                     Text="{Binding Path=CurrentLine}"
-                    TextAlignment="Right" />
+                    TextAlignment="Right" />-->
                 <Label
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
